Version 1.3.2
 Fixed:
  - [regression, bisected] Icon information is not displayed correctly [BUG-80];

Version 1.3.1
 Added:
  - Allow to execute and create icons for *.bat and *.msi files [BUG-69];
  - Added Chinese (China) translation (thx 2 Mingye Wang and Mingcong Bai);
  - Added Japanese translation (thx 2 Masanori Kakura);

 Fixed:
  - Renamed 'New' menu option for icon and prefix view to 'New icon' and 'New
  folder' respectively to avoid confusion [BUG-69];
  - Icon description is not exported into *.desktop file [BUG-69];
  - Winetrick's item description label doesn't wrap properly [BUG-71];
  - Qt5: detailed view item selection duplicate [BUG-75];
  - q4wine-cli does not accept extra app arguments [BUG-78];
  - Translation files moved from i18n to l10n;
  - Hide deprecated prefix options if values are not set;

Version 1.3
 Added:
  - Taiwan translation (thx 2 Jeff Huang);
  - Use icons from the system icon theme where possible [BUG-22];
  - Replace default raster icons with SVG analogs [BUG-21];
  - Extend App icons zoom sizes up to 512px [BUG-21];
  - Allow to choose *.svg and *.svgz images for icons [BUG-21];
  - Add an app option to switch default/ambiance-light/ambiance-dark icon [BUG-21];
  - Use ISO country codes for translation files (required for: pootle, gentoo ebuild);
  - Use native language name for language selection;
 Fixed:
  - WineLibs paths are no longer strictly required [BUG-68];
  - Process explorer is broken [BUG-70];

Version 1.2-r2
 Added:
  - Czech translation update (thx 2 Pavel Fric);
 Fixed:
  - QtSystemApplication library detection does not work well for Qt5 [BUG-64];

Version 1.2-r1
 Added:
  - Deleting prefix does not remove prefix folder in ~/.local/share/wineprefixes [BUG-43];
 Fixed:
  - Fixed typo in Startup Wizard;
  - Fixup Wine Libs detection [BUG-50];
  - Remove Wine settings from App settings [BUG-50,BUG-23];
  - Make Wine64 libs optional (for x86 only platforms) [BUG-50];
  - Backup/Restore prefix path handler;