@@ -1,6 +1,7 @@
 Version 1.3.2
  Fixed:
   - [regression, bisected] Icon information is not displayed correctly [BUG-80];
+  - Winetricks does not update [BUG-77];
 
 Version 1.3.1
  Added:
